crates/zizmor/tests/integration/snapshots/integration__snapshot__unpinned_images.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"unpinned-images.yml\")).args([\"--persona=pedantic\"]).run()?"
---
error[unpinned-images]: unpinned image references
  --> @@INPUT@@:19:7
   |
19 |       image: fake.example.com/example
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ container image is unpinned
   |
   = note: audit confidence → High

error[unpinned-images]: unpinned image references
  --> @@INPUT@@:28:9
   |
28 |         image: fake.example.com/redis
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ container image is unpinned
   |
   = note: audit confidence → High

error[unpinned-images]: unpinned image references
  --> @@INPUT@@:36:7
   |
36 |       image: fake.example.com/example:latest
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ container image is pinned to latest
   |
   = note: audit confidence → High

error[unpinned-images]: unpinned image references
  --> @@INPUT@@:45:9
   |
45 |         image: fake.example.com/redis:latest
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ container image is pinned to latest
   |
   = note: audit confidence → High

error[unpinned-images]: unpinned image references
  --> @@INPUT@@:53:7
   |
53 |       image: fake.example.com/example:0.0.348
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ container image is not pinned to a SHA256 hash
   |
   = note: audit confidence → High

error[unpinned-images]: unpinned image references
  --> @@INPUT@@:62:9
   |
62 |         image: fake.example.com/redis:7.4.3
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ container image is not pinned to a SHA256 hash
   |
   = note: audit confidence → High

6 findings: 0 unknown, 0 informational, 0 low, 0 medium, 6 high
